# Capstone-AMR-Ice-Melt

./: .gitignore  CMakeLists.txt  README.md
config/: opencv_config.yaml  robot_config.yaml
include/: telem_data.hpp
include/robot_ctrl/: ctrl_mgr.hpp  msg_mgr.hpp  serial_port.hpp  types.hpp
scripts/: launch.sh  setup-environment.sh
src/cpp/: CMakeLists.txt  cmd_manager.cpp  main.cpp  telem_manager.cpp
src/cpp/robot_ctrl/: ctrl_mgr.cpp  main.cpp  msg_mgr.cpp  serial_port.cpp
src/python/: Human_Detection.py  Integrated_Object_Detection.py  ReadONLY_Object_Detection.py  vision_main.py
test/cpp/: CMakeLists.txt  local_msgmgr.cpp
test/opencv/: opencv_sidwalk_img.py  opencv_webcam_test.py
